---------------------------------------------------------------------------------------------------
Version: 3.0.21
Date: ?????
  Changes:
    - Added Dutch locale
---------------------------------------------------------------------------------------------------
Version: 3.0.20
Date: 2025-08-12
  Changes:
    - Anthracene + Hydrogen -> Gasoline recipe can now be used in automation science. Resolves https://github.com/pyanodon/pybugreports/issues/1066
    - Fixed Bulk Inserter 1 and 2 technologies not having the correct prerequesites and dependants. Resolves https://github.com/pyanodon/pybugreports/issues/1086 and https://github.com/pyanodon/pybugreports/issues/1099
---------------------------------------------------------------------------------------------------
Version: 3.0.19
Date: 2025-07-20
  Changes:
    - Aromatic plastic recipe now fixed with medium py
---------------------------------------------------------------------------------------------------
Version: 3.0.18
Date: 2025-06-29
  Changes:
    - Fixed unknown key issues in bitumen seep extraction. Resolves https://github.com/pyanodon/pybugreports/issues/989
---------------------------------------------------------------------------------------------------
Version: 3.0.17
Date: 2025-06-10
  Changes:
    - Resolved crash.
---------------------------------------------------------------------------------------------------
Version: 3.0.16
Date: 2025-6-1
  Changes:
    - Allowed productivity in advanced engine unit recipe.
    - Halfed the volume of regenerative heat exchangers. Resolves https://github.com/pyanodon/pybugreports/issues/951
    - Reduced the hot air requirement in coalbed -> acidgas from 500 -> 250.
    - Reduced hotair requirement in coalbed -> refined syngas recipe from 500 -> 300.
---------------------------------------------------------------------------------------------------
Version: 3.0.15
Date: 2025-4-13
  Changes: